<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:elevation="3dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/qr_img"
                android:layout_width="222dp"
                android:layout_height="222dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/logo_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/logo"
                app:layout_constraintBottom_toBottomOf="@+id/logo_rg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo_rg" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/awesome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/theme"
                app:layout_constraintBottom_toBottomOf="@+id/awesome_cb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/awesome_cb" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/background_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/background"
                app:layout_constraintBottom_toBottomOf="@+id/background_rg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background_rg" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/color_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/color"
                app:layout_constraintBottom_toBottomOf="@+id/color_light_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/color_light_view" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="end"
                app:constraint_referenced_ids="logo_tv, background_tv, color_tv" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/awesome_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/awesome"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@id/qr_img" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/logo_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/logo_rg"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/logo_rg"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <RadioGroup
                android:id="@+id/logo_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/logo_norm_rb"
                app:layout_constraintStart_toEndOf="@+id/logo_img"
                app:layout_constraintTop_toBottomOf="@+id/awesome_cb">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/logo_none_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/logo_norm_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/norm" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/logo_grey_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grey" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/logo_bin_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary" />

            </RadioGroup>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/background_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/background_rg"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="@+id/background_rg"
                app:srcCompat="@mipmap/ic_launcher" />

            <RadioGroup
                android:id="@+id/background_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/bg_norm_rb"
                app:layout_constraintStart_toEndOf="@+id/background_img"
                app:layout_constraintTop_toBottomOf="@+id/logo_rg">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/bg_none_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/bg_norm_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/norm" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/bg_grey_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grey" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/bg_bin_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/binary" />

            </RadioGroup>

            <View
                android:id="@+id/color_light_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/background_rg" />

            <View
                android:id="@+id/color_dark_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/color_light_view"
                app:layout_constraintStart_toEndOf="@+id/color_light_view"
                app:layout_constraintTop_toTopOf="@+id/color_light_view" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/content_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo_rg"
                app:layout_constraintTop_toTopOf="@+id/logo_rg" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/refresh_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_refresh_white_24dp" />

</FrameLayout>
